WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
81062
Fix potential crash when loading test results
https://bugs.webkit.org/show_bug.cgi?id=81062
Summary
Fix potential crash when loading test results
Simon Fraser (smfr)
Reported
2012-03-13 17:11:46 PDT
Fix potential crash when loading test results
Attachments
Patch
(1.83 KB, patch)
2012-03-13 17:14 PDT
,
Simon Fraser (smfr)
dino
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2012-03-13 17:14:58 PDT
Created
attachment 131755
[details]
Patch
Simon Fraser (smfr)
Comment 2
2012-03-13 17:19:09 PDT
http://trac.webkit.org/changeset/110646
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug