Fix potential crash when loading test results https://bugs.webkit.org/show_bug.cgi?id=81062 <rdar://problem/11041732>

Reviewed by Dean Jackson.

If RenderLayerBacking::isSimpleContainerCompositingLayer() is called early,
before the document has a documentElement(), then it crashes. Fix with
a null check on documentElement().

No test because it's timing dependent.

* rendering/RenderLayerBacking.cpp:
(WebCore::RenderLayerBacking::isSimpleContainerCompositingLayer):

Canonical link: https://commits.webkit.org/98222@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@110646 268f45cc-cd09-0410-ab3c-d52691b4dbfc